# utimer

./: CMakeLists.txt  LICENSE  README.md
include/utimer/: utimer.h
source/: demo.c  utimer.c
tests/: CMakeLists.txt  test.cpp
